# automerge-sqlite-follower

./: .gitignore  Cargo.toml  readme.md
src/: contact.rs  contact_repository.rs  main.rs
